--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "minskl",
-  "version": "0.0.0",
-  "description": "mizchi's minimum project",
+  "name": "stone-skin",
+  "version": "0.0.1",
+  "description": "Isomorphic IndexedDb and Memory data wrapper",
+  "main": "index",
   "scripts": {
-    "server": "wzrd index.coffee:bundle.js -- -t coffeeify --extension='.coffee'",
-    "build": "browserify -t coffeeify --extension='.coffee' -o bundle.js index.coffee",
-    "open": "open -a /Applications/Google\\ Chrome\\ Canary.app 'http://localhost:9966'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "$(npm bin)/coffee -o . -c src/*.coffee"
   },
-  "author": "",
+  "author": "mizchi",
   "license": "MIT",
   "devDependencies": {
+    "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0"
   },
   "dependencies": {
