--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stone-skin",
-  "version": "0.0.16",
+  "version": "0.1.0",
   "description": "Isomorphic IndexedDb and Memory data wrapper",
   "main": "index",
   "scripts": {
@@ -22,5 +22,20 @@
     "idb-wrapper-promisify": "^2.1.1",
     "node-uuid": "^1.4.2",
     "tv4": "^1.1.9"
-  }
+  },
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mizchi/stone-skin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mizchi/stone-skin/issues"
+  },
+  "homepage": "https://github.com/mizchi/stone-skin",
+  "keywords": [
+    "indexeddb"
+  ]
 }
